--- a/resources/assets/field.css
+++ b/resources/assets/field.css
@@ -4,7 +4,7 @@
 }
 
 .lake-form-media-modal .pre-scrollable {
-    max-height: 100% !important;
+    max-height: 50vh !important;
 }
 
 .lake-form-media .lake-form-media-img-show {
